--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -10,7 +10,9 @@
             <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
             <form action="/admin/admin-accounts/search" class="content-detail-header-search" method="GET">
                 <input type="search" class="form-control" placeholder="Search by email or name..." aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
-                <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
+                <button style="width: 90px;" class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i>
+                </button>
             </form>
         </div>
         {{#if admins}}
