--- a/src/views/staff/trainee-accounts.hbs
+++ b/src/views/staff/trainee-accounts.hbs
@@ -8,12 +8,14 @@
         <h3 class="fs-4 mt-5">Accounts (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
             <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
-            <form action="" class="content-detail-header-search">
-                <input type="search" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
+            <form action="/staff/trainee-accounts/search" class="content-detail-header-search" method="GET">
+                <input type="search" class="form-control" placeholder="Search by email or name..." aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
+                <button style="width: 90px;" class="btn btn-primary" type="submit">
+                    <i class="bi bi-search"></i>
+                </button>
             </form>
         </div>
-        
+        {{#if trainees}}
         <table class="table table-hover table-bordered caption-top mt-5" style="width: 100%;">
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
@@ -67,6 +69,11 @@
                 {{/each}}
             </tbody>
         </table>
+        {{else}}
+        <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
+            <span>No results found for query "{{q}}"</span>
+        </div>
+        {{/if}}
     </main>
 
     <div class="modal-action_form js-modal-adding_form">
