--- a/src/views/staff/categories.hbs
+++ b/src/views/staff/categories.hbs
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+
 <body>
     {{> staffLayout}}
     <main class="content-detail" id="">
         <h3 class="fs-4 mt-5">Categories (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
-            <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New Category</button>
+            <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New
+                Category</button>
             <form action="/staff/categories/search" class="content-detail-header-search" method="GET">
-                <input type="search" name="q" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i class="bi bi-search"></i></button>
+                <input type="search" name="q" class="form-control" placeholder="Search by name..."
+                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i
+                        class="bi bi-search"></i></button>
             </form>
         </div>
         {{#if flashMsgs.success}}
-            <div class="container text-center alert alert-success col-8 fs-5 mt-5" id="flashMsg">
-                <span>{{flashMsgs.success}}</span>
-                <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
-            </div>
+        <div class="container text-center alert alert-success col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.success}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
         {{/if}}
         {{#if flashMsgs.error}}
-            <div class="container text-center alert alert-danger col-8 fs-5 mt-5" id="flashMsg">
-                <span>{{flashMsgs.error}}</span>
-                <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
-            </div>
+        <div class="container text-center alert alert-danger col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.error}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
         {{/if}}
         {{#if categories}}
         <h2 class="text-center mt-4 text-primary">List of Categories</h2>
@@ -47,19 +51,20 @@
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
                             <button type="button" class="btn btn-success js-edit-info">
                                 <i class="bi bi-pencil-square"></i>
-                                <a class ="underline-white1" href="/staff/categories/edit?id={{this._id}}">
+                                <a class="underline-white1" href="/staff/categories/edit?id={{this._id}}">
                                     <span class=" fs-6" style="margin-left: auto;">Edit</span>
                                 </a>
                             </button>
                             <button type="button" class="btn btn-danger">
                                 <i class="bi bi-x-lg"></i>
-                                <a class ="underline-white1" href="/staff/categories/delete/?id={{this._id}}", onclick="return conFirm_Delete()">
+                                <a class="underline-white1" href="/staff/categories/delete/?id={{this._id}}" ,
+                                    onclick="return conFirm_Delete()">
                                     <span class=" fs-6" style="margin-left: auto;">Delete</span>
                                     <script>
-                                        function conFirm_Delete(){
-                                        var result = confirm("Are you sure you want to delete this category?")
-                                        if(result==true)  return true;
-                                        else return false
+                                        function conFirm_Delete() {
+                                            var result = confirm("Are you sure you want to delete this category?")
+                                            if (result == true) return true;
+                                            else return false
                                         }
                                     </script>
                                 </a>
@@ -71,9 +76,9 @@
             </tbody>
         </table>
         {{else}}
-            <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
-                <span>No results found for query "{{q}}"</span>
-            </div>
+        <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
+            <span>No results found for query "{{q}}"</span>
+        </div>
         {{/if}}
     </main>
 
@@ -89,17 +94,21 @@
             <form class="modal-action_form-body" method="POST" action="/staff/categories/store">
                 <div>
                     <label for="categoryName">Category Name</label>
-                    <input type="text" class="form-control" id="categoryName" name="name"  placeholder="Name of Category..." required>
+                    <input type="text" class="form-control" id="categoryName" name="name"
+                        placeholder="Name of Category..." required>
                 </div>
                 <div>
                     <label for="categoryDescription">Category Description</label>
-                    <textarea class="form-control" id="categoryDescription" name="description" placeholder="Description..." required></textarea>
+                    <textarea class="form-control" id="categoryDescription" name="description"
+                        placeholder="Description..." required></textarea>
                 </div>
                 <div>
                     <label for="TotalCourse">Total Course</label>
-                    <input type="number" class="form-control" id="totalCourse" name="total"  placeholder="Total of Course..." required>
+                    <input type="number" class="form-control" id="totalCourse" name="total"
+                        placeholder="Total of Course..." required>
                 </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
+                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;"
+                        class="bi bi-check2"></i></button>
             </form>
             <footer class="modal-action_form-footer">
                 <a href="#" class="cancel" style="color: white">Cancel</a>
@@ -107,6 +116,6 @@
             </footer>
         </div>
     </div>
-{{> footerStaff}}
+    {{> footerStaff}}
 </body>
 </html>
