--- a/src/views/staff/courses.hbs
+++ b/src/views/staff/courses.hbs
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+
 <body>
     {{> staffLayout}}
     <main class="content-detail" id="">
         <h3 class="fs-4 mt-5">Courses (~ {{total}} records)</h3>
         <div class="content-detail-header mt-4">
-            <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Course</button>
+            <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New
+                Course</button>
             <form action="/staff/courses/search" class="content-detail-header-search" method="GET">
-                <input type="search" name="qq" class="form-control" placeholder="Search by name..." aria-label="Recipient's username" aria-describedby="basic-addon2">
-                <button style="width: 90px;" class="btn btn-primary" type="submit"><i class="bi bi-search"></i></button>
+                <input type="search" name="qq" class="form-control" placeholder="Search by code or name..."
+                    aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <button style="width: 90px;" class="btn btn-outline-primary" type="submit"><i
+                        class="bi bi-search"></i></button>
             </form>
         </div>
-    
+        {{#if flashMsgs.success}}
+        <div class="container text-center alert alert-success col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.success}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
+        {{/if}}
+        {{#if flashMsgs.error}}
+        <div class="container text-center alert alert-danger col-8 fs-5 mt-5" id="flashMsg">
+            <span>{{flashMsgs.error}}</span>
+            <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+        </div>
+        {{/if}}
+        {{#if courses}}
+        <h2 class="text-center mt-4 text-primary">List of Courses</h2>
         <table class="table table-hover table-bordered caption-top mt-5">
             <thead class="table-light">
                 <tr style="font-size: 18px; text-align: center;">
@@ -42,19 +59,20 @@
                         <div class="btn-group" style="z-index: 0;" role="group" aria-label="Basic mixed styles example">
                             <button type="button" class="btn btn-success js-edit-info">
                                 <i class="bi bi-pencil-square"></i>
-                                <a class ="underline-white" href="/staff/courses/edit/?id={{this._id}}">
+                                <a class="underline-white1" href="/staff/courses/edit/?id={{this._id}}">
                                     <span class=" fs-6" style="margin-left: auto;">Edit</span>
                                 </a>
                             </button>
                             <button type="button" class="btn btn-danger">
                                 <i class="bi bi-x-lg"></i>
-                                <a class ="underline-white" href="/staff/courses/delete/?id={{this._id}}", onclick="return conFirm_Delete()">
+                                <a class="underline-white1" href="/staff/courses/delete/?id={{this._id}}" ,
+                                    onclick="return conFirm_Delete()">
                                     <span class=" fs-6" style="margin-left: auto;">Delete</span>
                                     <script>
-                                        function conFirm_Delete(){
-                                        var result = confirm("Are you sure you want to delete this course?")
-                                        if(result==true)  return true;
-                                        else return false
+                                        function conFirm_Delete() {
+                                            var result = confirm("Are you sure you want to delete this course?")
+                                            if (result == true) return true;
+                                            else return false
                                         }
                                     </script>
                                 </a>
@@ -65,6 +83,11 @@
                 {{/each}}
             </tbody>
         </table>
+        {{else}}
+        <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
+            <span>No results found for query "{{qq}}"</span>
+        </div>
+        {{/if}}
     </main>
 
     <div class="modal-action_form js-modal-adding_form">
@@ -79,37 +102,44 @@
             <form class="modal-action_form-body" method="POST" action="/staff/courses/store">
                 <div class="form-group">
                     <label for="codeCourse">Code</label>
-                    <input type="text" class="form-control" id="codeCourse" name="code" placeholder="Code of Course..." required>
+                    <input type="text" class="form-control" id="codeCourse" name="code" placeholder="Code of Course..."
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="categoryName">Course Name</label>
-                    <input type="text" class="form-control" id="courseName" name="name" placeholder="Course Name..." required>
+                    <input type="text" class="form-control" id="courseName" name="name" placeholder="Course Name..."
+                        required>
                 </div>
                 <div class="col-md-4">
-                <label for="category" class="form-label">Category Name</label>
-                <select name="category" id="categoryname" class="form-select">
-                    {{#each categories}}
-                    <option value="{{this.name}}">{{this.name}}</option>
-                    {{/each }}
-                </select>
+                    <label for="category" class="form-label">Category Name</label>
+                    <select name="category" id="categoryname" class="form-select">
+                        {{#each categories}}
+                        <option value="{{this.name}}">{{this.name}}</option>
+                        {{/each }}
+                    </select>
                 </div>
                 <div class="form-group">
                     <label for="courseDescription">Course Description</label>
-                    <textarea class="form-control" id="courseDescription" name="description" placeholder="Course Description..." required></textarea>
+                    <textarea class="form-control" id="courseDescription" name="description"
+                        placeholder="Course Description..." required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="create">CreateAt</label>
-                    <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..." required>
+                    <input type="date" class="form-control" id="create" name="createAt" placeholder="Update At..."
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="update">UpdateAt</label>
-                    <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..." required>
+                    <input type="date" class="form-control" id="update" name="updateAt" placeholder="Update At..."
+                        required>
                 </div>
                 <div class="form-group">
                     <label for="session">Session</label>
-                    <input type="number" class="form-control" id="session" name="session" placeholder="Session of Course..." required>
+                    <input type="number" class="form-control" id="session" name="session"
+                        placeholder="Session of Course..." required>
                 </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
+                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;"
+                        class="bi bi-check2"></i></button>
             </form>
             <footer class="modal-action_form-footer">
                 <a href="#" class="cancel" style="color: white">Cancel</a>
@@ -119,6 +149,6 @@
         </div>
     </div>
     </div>
-{{> footerStaff}}
+    {{> footerStaff}}
 </body>
 </html>
