--- a/src/views/staff/editCategory.hbs
+++ b/src/views/staff/editCategory.hbs
@@ -8,6 +8,7 @@
         min-height: 100vh;
         overflow: hidden;
     }
+
     .editCourse-container {
         background-color: white;
         box-shadow: 0 8px 10px 6px rgb(228, 228, 228);
@@ -15,12 +16,14 @@
         border-bottom-right-radius: 10px;
         min-width: 500px;
     }
+
     label {
         cursor: pointer;
         color: rgb(44, 44, 44);
         font-weight: 500;
     }
 </style>
+
 <body>
     <main>
         <div class="editCourse-container">
@@ -30,30 +33,29 @@
             <a href="/staff/categories" type="button" class="btn btn-link fs-5">
                 <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
             </a>
-            
             <div style="width: 50%, min-width: 475px; padding: 0px 400px;">
-            <form class="row g-3" method="POST" action="/staff/categories/update/?id={{category._id}}">
-            <div class="mt-4">
-                <label for="name">Category Name</label>
-                <input type="text" class="form-control" value="{{category.name}}" id="name" name="name" placeholder="Name of Category..." required>
-            </div>
-            <div class="mt-4">
-                <label for="TotalCourse">Total Course</label>
-                <input type="number" class="form-control"  value="{{category.total}}" id="totalCourse" name="total"  placeholder="Total of Course..." required>
-            </div>
-            <div class="mt-4">
-                    <label for="description">Category Description</label>
-                    <textarea class="form-control" id="description" name="description" placeholder="Name of Category..." required>{{category.description}}</textarea>
-            </div>
-            <div class="col-12 mt-4" style= "text-align: center">
-                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
-                    <i class="bi bi-check2 fs-5"></i>
-                </button>
-            </div>
-        </form> 
+                <form class="row g-3" method="POST" action="/staff/categories/update/?id={{category._id}}">
+                    <div class="mt-4">
+                        <label for="name">Category Name</label>
+                        <input type="text" class="form-control" value="{{category.name}}" id="name" name="name"
+                            placeholder="Name of Category..." required>
+                    </div>
+                    <div class="mt-4">
+                        <label for="TotalCourse">Total Course</label>
+                        <input type="number" class="form-control" value="{{category.total}}" id="totalCourse"
+                            name="total" placeholder="Total of Course..." required>
+                    </div>
+                    <div class="mt-4">
+                        <label for="description">Category Description</label>
+                        <textarea class="form-control" id="description" name="description"
+                            placeholder="Name of Category..." required>{{category.description}}</textarea>
+                    </div>
+                    <div class="col-12 mt-4" style="text-align: center">
+                        <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                            <i class="bi bi-check2 fs-5"></i>
+                        </button>
+                    </div>
+                </form>
     </main>
 </body>
 </html>
-            
-
-    
