--- a/src/views/partials/trainerLayout.hbs
+++ b/src/views/partials/trainerLayout.hbs
@@ -5,13 +5,13 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-            {{!-- <img src="data:image/{{user.image.contentType}};base64,{{convertImage user.image.data}}" alt="">
+            <img src="data:image/{{user.image.contentType}};base64,{{convertImage user.image.data}}" alt="">
             <label for="info-checkbox">{{user.name}}
                 <span class="fas fa-caret-down"></span>
-            </label> --}}
+            </label>
             <input type="checkbox" name="" id="info-checkbox">
             <ul>
-                {{!-- <li><a href="/{{removeSpace user.name}}">Your profile</a></li> --}}
+                <li><a href="/{{removeSpace user.name}}">Your profile</a></li>
                 <li><a href="/logout">Logout</a></li>
             </ul>
         </div>
@@ -25,7 +25,7 @@
         <a href="/trainer"><i class="bi bi-house-door"></i></i>Home</a>
         <a href="/trainer/assignedCourse"><i class="bi bi-briefcase"></i> View Courses</a>
         <a href="/trainer/viewGrade"><i class="bi bi-briefcase"></i>Grade</a>
-        <a href="/trainer/profile"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="/{{removeSpace user.name}}"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
 </aside>
