--- a/src/views/staff/editStaff.hbs
+++ b/src/views/staff/editStaff.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {{> head}}
+
 <body>
     {{> staffLayout}}
 
@@ -8,9 +9,12 @@
         <a href="/{{removeSpace user.name}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{staff._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/{{removeSpace user.name}}/update_profile?id={{staff._id}}"
+            enctype="multipart/form-data">
             <div class="text-left">
-                <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{staff.image.contentType}};base64,{{convertImage staff.image.data}}" alt="" class="img-thumbnail">
+                <img style="width: 170px; height: 170px; margin-right: 20px;"
+                    src="data:image/{{staff.image.contentType}};base64,{{convertImage staff.image.data}}" alt=""
+                    class="img-thumbnail">
                 <div class="chosen_image-container">
                     <img style="width: 170px; height: 170px;" src="" class="img-thumbnail" id="chosenImage" alt="">
                     <i id="cancel-btn" class="bi bi-x-lg"></i>
@@ -19,14 +23,18 @@
             <div class="col-12 mt-4 mb-3">
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
-
             <div class="col-12">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{staff.email}}" required placeholder="Your email address...">
+                <span style="display: block; color: rgb(44, 44, 44);">
+                    Email Address
+                </span>
+                <span style="display: block;">{{user.email}}</span>
+                <input type="hidden" class="form-control" id="email" name="email" value="{{user.email}}">
+
             </div>
             <div class="col-12">
                 <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{staff.name}}" required placeholder="Your full name...">
+                <input type="text" class="form-control" id="fullName" name="name" value="{{staff.name}}" required
+                    placeholder="Your full name...">
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -34,9 +42,10 @@
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{staff.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required
+                    placeholder="Your address...">{{staff.address}}</textarea>
             </div>
-                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+            <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
@@ -49,6 +58,6 @@
         previewImageAndClose();
     </script>
 
-{{> frameworkCDN}}
+    {{> frameworkCDN}}
 </body>
 </html>
